--- a/payment-service/src/main/resources/application.yaml
+++ b/payment-service/src/main/resources/application.yaml
@@ -1,10 +1,10 @@
 server:
-  port: 8190
+  port: 8192
 spring:
   application:
-    name: subscription-service
+    name: payment-service
   datasource:
-    url: jdbc:postgresql://localhost:5436/subscription-service
+    url: jdbc:postgresql://localhost:5436/payment-service
     driver-class-name: org.postgresql.Driver
     username: postgres
     password: postgres
@@ -15,10 +15,12 @@ spring:
   kafka:
     bootstrap-servers: localhost:9092
     consumer:
-      group-id: subscription-service-group
+      group-id: payment-service-group
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      properties:
+        spring.json.trusted.packages: "*"
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
